src/app/hoteldetails/hoteldetails.component.css
h1 {
    color: green;
}

ul,
menu,
dir {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    padding-inline-start: 40px;
}

img {
    vertical-align: middle;
    border-style: none;
}

.menu {
    display: -webkit-box;
    list-style: none;
    height: 30px;
}

.hotel-details .amenities ul.list {
    padding: 0px;
    margin: 0px;
    list-style-type: none;
}

.pt-2,
.py-2 {
    padding-top: .5rem !important;
}

.mb-1,
.my-1 {
    margin-bottom: .25rem !important;
}

.mr-auto,
.mx-auto {
    margin-right: auto !important;
}


.dreview {
    padding: 0px;
    list-style: none;
    display: -webkit-inline-box;
}

.hotel-hilights i {
    padding: 8px;
    margin-right: 2px;
    background: #eee;
    border-radius: 4px;
}

a:not([href]):not([tabindex]) {
    color: inherit;
    text-decoration: none;
}

.navbar-nav a {
    color: #fff;
}

.fa {
    display: inline-block;
    font: normal normal normal 14px/1 FontAwesome;
    font-size: inherit;
    text-rendering: auto;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

.nav-link {
    display: block;
    padding: .5rem 1rem;
}

.navbar-collapse {
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    -ms-flex-positive: 1;
    flex-grow: 1;
    -ms-flex-align: center;
    align-items: center;
}

.hotel-details .amenities {
    margin-bottom: 15px;
    border-bottom: 1px solid #e8e8e8;
}

.hotel-details h4 {
    color: #f80758;
    margin-bottom: 0px;
}

.hotel-details .amenities .heading {
    font-size: 16px;
    font-weight: 500;
}

.hotel-details p {
    margin-bottom: 10px;
}

.hotel-details .amenities ul.list {
    padding: 0px;
    margin: 0px;
    list-style-type: none;
}

.hotel-details .amenities ul.list li {
    padding-bottom: 10px;
    display: inline-block;
}

.hotel-details .amenities ul.list li:before {
    content: "\f046";
    font-family: fontAwesome;
    padding-right: 8px;
}

.hotel-details .amenities ul.list li:after {
    content: "|";
    margin: 0 15px;
}

.slimage {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

/* new styles */
.room-type {}

.room-type_left-sec {
    padding: 0 20px;
}

.room-type_left-sec h2 {
    font-size: 1.7rem;
    font-weight: bold;
    text-transform: uppercase;
}

.room-type_left-sec img {
    height: 225px;
    border-radius: 5px;
    width: 100%;
    object-fit: cover;
}

.room-type_benefits ul {
    padding: 0 20px;
}

.room-type_aminities h4 {
    padding-top: 20px;
    padding-left: 20px;
    font-size: 1.2rem;
}

.room-type_aminities ul {
    padding: 0 20px;
}

.room-type_aminities ul i {
    margin-right: 20px;
}

.room-type_aminities ul li {
    margin: 10px 0;
}

.room-type_benefits ul i {
    margin-right: 20px;
}

.room-type_benefits ul li {
    margin: 20px 0;

}

